# trytond-activity

./: activity.py  pyproject.toml  tryton.cfg
view/: activity_activity_form.xml  activity_activity_tree.xml
